--- a/src/index.html
+++ b/src/index.html
@@ -2,12 +2,29 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Day3app</title>
+  <title>Calculator</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
+  <script>
+    //Gets random colors
+    function getRandomColor() {
+        const r = Math.floor(Math.random() * 256);
+        const g = Math.floor(Math.random() * 256);
+        const b = Math.floor(Math.random() * 256);
+        return `rgb(${r}, ${g}, ${b})`;
+    }
+
+    function changeBackgroundColor() {
+        const randomColor = getRandomColor();
+        document.body.style.backgroundColor = randomColor;
+    }
+
+    // Change color
+    setInterval(changeBackgroundColor, 500);
+</script>
   <app-root></app-root>
 </body>
 </html>
